[gd_scene load_steps=7 format=3 uid="uid://d2k5i0p65qudy"]

[ext_resource type="Theme" uid="uid://diu3ahrw1puva" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_8tksc"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/ConditionEditor/ConditionEditorManager.gd" id="2_83nmd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t4xhv"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_042x6"]
color = Color(0.0666667, 0.0784314, 0.0941176, 1)
thickness = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2a3bu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wj8b0"]

[node name="ConditionEditor" type="Panel"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8tksc")
script = ExtResource("2_83nmd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0125
anchor_top = 0.0222222
anchor_right = 0.9875
anchor_bottom = 0.977778
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NicknameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Method Nickname"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_t4xhv")

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="SearchBar" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search..."

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_042x6")

[node name="Symbols" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="VBoxContainer/Symbols"]
layout_mode = 2
tooltip_text = "Append these symbols before the \"token\"s."
mouse_filter = 0
text = "Symbols (Hover for more info): "

[node name="WorldState" type="Label" parent="VBoxContainer/Symbols"]
layout_mode = 2
tooltip_text = "WorldState ($): When appended before a \"token\", treat the following token as an index/key of the world state dictionary.
- ie. $example ==> WorldStates[\"example\"]"
mouse_filter = 0
text = "$,"

[node name="NULL" type="Label" parent="VBoxContainer/Symbols"]
layout_mode = 2
tooltip_text = "null (NULL): Used to check if the state is invalid. Intended to be used when checking the validity of a world state value or if the world state exists.
- ie. $example == NULL -- Checks to see if the value of WorldStates[\"example\"] is null/does not exists."
mouse_filter = 0
text = "NULL,"

[node name="Vector" type="Label" parent="VBoxContainer/Symbols"]
layout_mode = 2
tooltip_text = "(X,X,X): Used for Vectors. Requires 2 or 3 numbers separated by commas with no spaces in between.
- If there's at least 1 float in the list of numbers, will cast the entire vector to floats.
- ie. (1,2)	==> Vector2
- ie. (1, 3, 4) ==> Vector3"
mouse_filter = 0
text = "()"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_2a3bu")

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Add Condition"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_2a3bu")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_wj8b0")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_042x6")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ConditionLineContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/SearchBar" to="." method="_on_search_bar_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/AddButton" to="." method="_on_add_button_pressed"]
